--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@
     list-style: none;
     text-decoration: none;
     font-family: 'Epilogue', sans-serif;
-    background-color: hsl(0, 0%, 98%);
 }
 body {
-    overflow-x: hidden;
+    overflow: hidden;
+    background-color: hsl(0, 0%, 98%);
 }
 .header {
     display: flex;
@@ -35,8 +35,42 @@ nav {
 ul {
     display: flex;
     justify-content: space-around;
-    width: 40%;
-    
+    width: 27%;
+}
+#features-dropdown {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 155px;
+    padding: 10px;
+    width: 160px;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 5px 5px 17px 1px rgba(0,0,0,0.2);
+}
+#features-dropdown li {
+    padding: 8px;
+
+}
+#features-dropdown li img {
+    padding-right: 20px;
+    margin: 0;
+}
+#company-dropdown {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 360px;
+    padding: 10px;
+    width: 120px;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 5px 5px 17px 1px rgba(0,0,0,0.2);
+}
+#company-dropdown li {
+padding: 8px;
 }
 li {
     display: flex;
@@ -58,10 +92,20 @@ a:hover {
     justify-content: space-around;
     align-items: center; 
 }
+.arrows {
+    display: flex;
+}
+.features-arrow-up {
+    display: none;
+}
+.company-arrow-up {
+    display: none; 
+}
 .login-area {
     display: flex;
     justify-content: space-around;
     align-items: center; 
+    width: 100%;
 }
 
 .active {
@@ -95,6 +139,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+    height: 85vh;
     align-items: flex-end;
     padding: 40px;
 }
@@ -108,8 +153,8 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 496px;
-    height: 432px;
+    width: 432px;
+    height: 400px;
 }
 .description-title {
     justify-self: flex-start;
@@ -144,11 +189,13 @@ main {
     justify-content: space-between;
 }
 .hero-image {
-    width: 432px
+    width: 432px;
+    height: 100%;
 }
 .desktop-image {
     display: flex;
     width: 100%;
+    height: 99%;
 }
 .mobile-image {
     display: none;
@@ -167,6 +214,9 @@ footer {
     }
 }
 @media (max-width: 1024px) {
+    html {
+        overflow: hidden;
+    }
     header {
         display: flex;
         justify-content: space-between;
@@ -190,13 +240,14 @@ footer {
     #qualquer-coisa {
         position: absolute;
         top: 0;
-        right: -300px;
+        right: -250px;
         display: block;
         flex-direction: column;
-        width: 300px;
+        width: 250px;
         height: 100vh;
         transition: 0.25s ease-in;
         z-index: 1;
+        background-color: hsl(0, 0%, 98%);
     }
     ul {
         flex-direction: column;
@@ -248,14 +299,36 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        height: 40vh;
+        height: 100vh;
         justify-content: space-around;
         align-items: center;
-        margin-top: 40px;
     }
     .nav {
         align-items: flex-start;
-        height: 50%;
+        padding: 40px;
+        height: 100%;
+    }
+    #features-dropdown {
+        position: relative;
+        top: unset;
+        left: unset;
+        padding: 10px;
+        width: 160px;
+        background: hsl(0, 0%, 98%);
+        border-radius: none;
+        box-shadow: none;
+        height: 0;
+    }
+    #company-dropdown {
+        position: relative;
+        top: unset;
+        left: unset;
+        padding: 10px;
+        width: 160px;
+        background: hsl(0, 0%, 98%);
+        border-radius: none;
+        box-shadow: none;
+        height: 0;
     }
     .login-area {
         justify-content: space-between;
@@ -270,6 +343,7 @@ footer {
         align-items: center;
         padding: 0;
         margin-top: 32px;
+        height: unset;
     }
     .informations {
         width: 90%;
@@ -293,6 +367,7 @@ footer {
     }
     .hero-image {
         width: 100%;
+        height: 100%;
     }
     .desktop-image {
         display: none;
@@ -300,5 +375,6 @@ footer {
     .mobile-image {
         display: flex;
         width: 100%;
+        height: 47vh;
     }
 }
